[package]
name = "cert-exporter-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
der-parser = "*"
glob = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
prometheus_exporter = "0.8"
structopt = "0.3"
thiserror = "1"
time = "0.3"
x509-parser = "0.13"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"