[package]
name = "cert-exporter-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", default-features = false}
der-parser = {version = "8", default-features = false}
glob = {version = "0.3", default-features = false}
log = {version = "0.4", default-features = false}
pretty_env_logger = {version = "0.4", default-features = false}
prometheus_exporter = {version = "0.8", default-features = false}
structopt = {version = "0.3", default-features = false}
thiserror = {version = "1", default-features = false}
time = {version = "0.3", default-features = false}
x509-parser = {version = "0.14", default-features = false}

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"